# CliHelpParser

./: .buildinfo  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  README.rst  api.html  changes.html  cli.html  environment.yml  genindex.html  grammar.html  index.html  installation.html  model.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build.yml
_sources/: changes.rst.txt  cli.rst.txt  index.rst.txt  installation.rst.txt  model.rst.txt
_static/: railroad.html
acclimatise/: __init__.py  cli.py  cli_types.py  execution.py  hash.py  jinja.py  model.py  name_generation.py  parser.py  yaml.py
acclimatise/converter/: __init__.py  cwl.py  galaxy.py  wdl.jinja2  wdl.py  yml.py
acclimatise/execution/: __init__.py  docker.py  local.py
acclimatise/flag_parser/: elements.py  parser.py
acclimatise/usage_parser/: __init__.py  elements.py  model.py  parser.py
aclimatise/: __init__.py  cli.py  cli_types.py  integration.py  model.py  name_generation.py  nlp.py  yaml.py
declivity/: __init__.py  cli.py  cli_types.py  htseq.txt  jinja.py  model.py  parser.py  parser2.py  types.py
docs/: api.rst  changes.rst  cli.rst  conf.py  grammar.rst  index.rst  installation.rst  model.rst
test/: bwamem.txt  conftest.py  test.py  test_bwa.py  test_cli.py  test_combined_parser.py  test_convert.py  test_e2e.py  test_explore.py  test_explore_e2e.py  test_htseq.py  test_model.py  test_parse_e2e.py  test_pisces.py  test_samtools.py  test_type_inference.py  test_wdl.py  test_yaml_dump.py  util.py
(+145 files in other folders)
