[metadata]
name = acclimatise
version = 0.3.0
description = Acclimatise is a Python library and command-line utility for parsing the help output of a command-line tool and then outputting a description of the tool in a more structured format
long_description = file: README.md
long_description_content_type: text/markdown
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Natural Language :: English

[tool:pytest]
log_level = INFO
